page tags included

--- a/_includes/page-tags.html
+++ b/_includes/page-tags.html
@@ -1,14 +1,12 @@
 {% if page.tags.size > 0 %}
-<section>
-    <span>Tags:&nbsp;</span>
-    <ul class="icons">
-    {% for ptag in page.tags %}
-        <li>
-            <a href="{{ site.url }}/tags/{{ navlang }}/{{ ptag }}" style="text-decoration: none; border-bottom:none">
-                <span>{{ stag }}</span>
-            </a>
-        </li>
-    {% endfor %}
-    </ul>
-</section>
+<span>Tags:&nbsp;</span>
+<ul class="icons">
+{% for ptag in page.tags %}
+    <li>
+        <a href="{{ site.url }}/tags/{{ navlang }}/{{ ptag }}" style="text-decoration: none; border-bottom:none">
+            <span>{{ ptag }}</span>
+        </a>
+    </li>
+{% endfor %}
+</ul>
 {% endif %}
