post list unification

--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -34,7 +34,7 @@ layout: compress
                         <a href="{{ site.url }}{{ post.url }}" class="image"><img src="{{ domain_thumb }}{{ post.thumb }}" alt="{{ site.data.messages.locales[navlang].btn_more }}" /></a>
                         {% endif %}
                         <h5>{{ post.date | date_to_string }}</h5>
-                        <h3>{{ post.title }}</h3>
+                        <h3><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h3>
                         <p>{{ post.excerpt }}</p>
                         <ul class="actions">
                             <li><a href="{{ site.url }}{{ post.url }}" class="button">{{ site.data.messages.locales[navlang].btn_more }}</a></li>
