--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -28,7 +28,7 @@ layout: compress
                     {% for post in tposts %}
                         {% if post.title != null %}
                         <article>
-                            <div class="content">
+                            <!--<div class="content">-->
                                 {% if post.thumb %}
                                 {% if post.thumb contains 'http' %}{% assign domain_thumb = '' %}{% else %}{% assign domain_thumb = site.url %}{% endif %}
                                 <a href="{{ site.url }}{{ post.url }}" class="image"><img src="{{ domain_thumb }}{{ post.thumb }}" alt="{{ site.data.messages.locales[navlang].btn_more }}" /></a>
@@ -36,7 +36,10 @@ layout: compress
                                 <h5>{{ post.date | date_to_string }}</h5>
                                 <h3><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h3>
                                 <p>{{ post.excerpt }}</p>
-                            </div>
+                                <ul class="actions">
+                                    <li><a href="{{ site.url }}{{ post.url }}" class="button">{{ site.data.messages.locales[navlang].btn_more }}</a></li>
+                                </ul>
+                            <!--</div>-->
                         </article>
                         {% endif %}
                     {% endfor %}
