post list unification

--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -24,7 +24,7 @@ layout: compress
                     <header class="major">
                         <h2 id="{{ page.ref }}">{{ page.ref }}</h2>
                     </header>
-                    <div class="features">
+                    <div class="posts">
                     {% for post in tposts %}
                         {% if post.title != null %}
                         <article>
