--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@ layout: compress
                 <!-- Content -->
                 <section>
                 	<header class="main">
+                        <p>{{ post.date | date_to_string }}</p>
                         {% if site.reading_time %}
                         <p class="reading-time">
                             {% include read-time.html %}
