--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,5 +32,8 @@
       {% if site.linkedin_url %}
       <li><a href="{{ site.linkedin_url }}" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
       {% endif %}
+      {% if site.xing_url %}
+      <li><a href="{{ site.xing_url }}" class="icon fa-xing" target="_blank"><span class="label">Xing</span></a></li>
+      {% endif %}
     </ul>
   </header>
