xing link in sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -134,6 +134,9 @@
             {% if site.linkedin_url %}
             <li><a href="{{ site.linkedin_url }}" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
             {% endif %}
+            {% if site.xing_url %}
+            <li><a href="{{ site.xing_url }}" class="icon fa-xing" target="_blank"><span class="label">Xing</span></a></li>
+            {% endif %}
           </ul>
         <ul class="contact">
             {% if site.email %}
