--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Header -->
   <header id="header">
-    <a href="{{ '' | absolute_url }}{{ navlang }}/" class="logo"><strong>{{ site.title }}</strong> {{ site.subtitle }}</a>
+    <a href="{{ '' | absolute_url }}{{ navlang }}/" class="logo">{% if page.title %}<strong>{{ page.title }}</strong>{% else %}<strong>{{ site.title }}</strong> {{ site.subtitle }}{% endif %}</a>
     <ul class="icons">
       {% if site.twitter_url %}
       <li><a href="{{ site.twitter_url }}" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
