* new post 2018-02-26-mehrprachige-jekyll-seiten-ohne-plugin.md * small fixes

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -11,10 +11,10 @@
       {% include intro-en.md %}
       {% endif %}
       <ul class="actions">
-        <li><a href="/about/{{ navlang }}/" class="button big">{{ site.data.messages.locales[navlang].btn_more }}</a></li>
+        <li><a href="{{ site.url }}/about/{{ navlang }}/" class="button big">{{ site.data.messages.locales[navlang].btn_more }}</a></li>
       </ul>
     </div>
     <span class="image object">
-      <img src="/assets/img/me_colored_2.jpg" alt="" />
+      <img src="{{ site.url }}/assets/img/me_colored_2.jpg" alt="" />
     </span>
   </section>
