--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -1,3 +1,3 @@
 {% assign wpm = site.words_per_minute | append: '.0' %}
 {% assign readtime = content | strip_html | number_of_words | divided_by:wpm | round %}
-Reading time ~{% if readtime <= 1 %}1 minute{% else %}{{ readtime }} minutes{% endif %}
+{{ site.data.messages.locales[navlang].reading_time }} ~{% if readtime <= 1 %}1 {{ site.data.messages.locales[navlang].minute }}{% else %}{{ readtime }} {{ site.data.messages.locales[navlang].minutes }}{% endif %}
