--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,6 +54,19 @@
                     {% endfor %}
                 </ul>
             </li>
+            <li>
+                <span class="opener">{{ site.data.messages.locales[navlang].pages }}</span>
+                <ul>
+                    {% for link in site.data.navigation.locales[navlang].pages %}
+                    {% if link.url contains 'http' %}
+                        {% assign domain = '' %}
+                        {% else %}
+                        {% assign domain = site.url %}
+                    {% endif %}
+                    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" ref="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            </li>
           </ul>
         </nav>
       <!-- Section -->
