--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,14 @@
 {% assign navlang = site.locale %}
 {% endif %}
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115916811-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-115916811-1');
+  </script>
   <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
