--- a/_layouts/search-results.html
+++ b/_layouts/search-results.html
@@ -21,7 +21,9 @@ layout: compress
         </div>
         <script>
             window.store = {
-                {% assign posts=site.posts | where:"lang", page.lang %}
+                {% assign lang_pages=site.pages | where:"lang", page.lang %}
+                {% assign lang_posts=site.posts | where:"lang", page.lang %}
+                {% assign posts = lang_pages | concat: lang_posts %}
                 {% for post in posts %}
                     "{{ post.url | slugify }}": {
                         "title": "{{ post.title | xml_escape }}",
