--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -72,7 +72,7 @@
       <!-- Section -->
         <section>
           <header class="major">
-            <h2>Get in touch</h2>
+            <h2>{{ site.data.messages.locales[navlang].get_in_touch }}</h2>
           </header>
         <ul class="icons">
             {% if site.twitter_url %}
