--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,4 +30,14 @@
     {% endfor %}
   {% endif %}
   {% seo %}
+  {% assign lang_ref_pages=site.pages | where:"ref", page.ref %}
+  {% assign lang_ref_posts=site.posts | where:"ref", page.ref %}
+  {% assign lang_ref_pages = lang_ref_pages | concat: lang_ref_posts  | sort: 'lang' %}
+  {% for link in site.data.navigation.locales[navlang].languages %}
+    {% assign ref_page=lang_ref_pages | where:"lang", link.lang | first %}
+    {% if ref_page %}
+    <link rel="alternate" hreflang="{{link.lang }}" href="{{ site.url }}{{ ref_page.url }}" />  
+    {% endif %}
+  {% endfor %}
+
 </head>
