--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,9 +20,7 @@
             <li>
               <span class="opener">{{ site.data.messages.locales[navlang].languages }}</span>
               <ul>
-                {% assign lang_ref_pages=site.pages | where:"ref", page.ref %}
-                {% assign lang_ref_posts=site.posts | where:"ref", page.ref %}
-                {% assign lang_ref_pages = lang_ref_pages | concat: lang_ref_posts  | sort: 'lang' %}
+                <!-- lang_ref_pages assembled in head.html -->
                 {% for link in site.data.navigation.locales[navlang].languages %}
                   {% assign ref_page=lang_ref_pages | where:"lang", link.lang | first %}
                   {% if ref_page %}
