--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,7 +2,8 @@
 layout: compress
 ---
 <!DOCTYPE HTML>
-<html>
+{% include navlang.html %}
+<html lang="{{ navlang }}">
   {% include head.html %}
   <body>
     <!-- Wrapper -->
