--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   </script>
   <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
   <meta charset="utf-8" />
+  <meta name="msvalidate.01" content="6C278EA84D78C46BEDA68B44BD46A150" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <!--[if lte IE 8]><script src="{{ 'assets/js/ie/html5shiv.js' | relative_url }}"></script><![endif]-->
   <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}" />
