banner more button now links to posts

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -11,7 +11,7 @@
       {% include intro-en.md %}
       {% endif %}
       <ul class="actions">
-        <li><a href="{{ site.url }}/about/{{ navlang }}/" class="button big">{{ site.data.messages.locales[navlang].btn_more }}</a></li>
+        <li><a href="{{ site.url }}/posts/{{ navlang }}/" class="button big">{{ site.data.messages.locales[navlang].btn_more }}</a></li>
       </ul>
     </div>
     <span class="image object">
