--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,6 +29,7 @@ layout: compress
                         <img src="{{ page.image | absolute_url }}" alt="" />
                     </span>
                     {% endif %}
+                    <h1 style="font-size: 0px; margin: 0px;">{{ page.title }}</h1>
                     {{ content }}
                 </section>
                 <br /> 
