enables sass processing

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -35,8 +35,8 @@
 	$palette: (
 		bg:					#ffffff,
 		bg-alt:				#f5f6f7,
-		fg:					#7f888f,
-		fg-bold:			#3d4449,
+		fg:					#3d4449,
+		fg-bold:			#1d2e3f,
 		fg-light:			#9fa3a6,
 		border:				rgba(210,215,217,0.75),
 		border-bg:			transparentize(#e6ebed, 0.75),
