--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,6 @@
+---
+sitemap: false
+---
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
@@ -45,6 +48,7 @@
 	@import 'components/table';
 	@import 'components/button';
 	@import 'components/mini-posts';
+	//@import 'components/notice';
 	@import 'components/features';
 	@import 'components/posts';
 
