--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -40,5 +40,9 @@
 		fg-light:			#9fa3a6,
 		border:				rgba(210,215,217,0.75),
 		border-bg:			transparentize(#e6ebed, 0.75),
-		accent:				#f56a6a
+		accent:				#f56a6a,
+		success:			#62c462,
+		warning:			#f89406,
+		danger:				#ee5f5b,
+		info:				#52adc8,
 	);
