--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -48,7 +48,7 @@ sitemap: false
 	@import 'components/table';
 	@import 'components/button';
 	@import 'components/mini-posts';
-	//@import 'components/notice';
+	@import 'components/notice';
 	@import 'components/features';
 	@import 'components/posts';
 
