--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,9 @@
       <meta property="article:section" content="{{ category }}" />
     {% endfor %}
   {% endif %}
+  {% if page.date_modified %}
+    <meta property="article:modified_time" content="{{ page.date_modified | date_to_xmlschema }}" />
+  {% endif %}
   {% seo %}
   {% for link in site.data.navigation.locales[navlang].languages %}
     {% assign ref_page=lang_ref_pages | where:"lang", link.lang | first %}
