--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -132,8 +132,9 @@
       <!-- Footer -->
         <footer id="footer">
           <p class="copyright">&copy; Marco Stolze. All rights reserved. <br />
-            Design based on: <a href="https://html5up.net/editorial">Editorial theme</a> by 
-            <a href="https://andrewbanchi.ch">Andrew Banchich</a>. <br /> <br />
+            Design based on: <a href="https://html5up.net/editorial">Editorial theme</a>. 
+            <br /> 
+            <br />
             <a href="{{ '' | absolute_url }}impressum/{{ navlang }}/">Impressum</a>
           </p>
         </footer>
