css color adjustments

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -200,7 +200,7 @@
 				width: 7.25em;
 
 				&:before {
-					color: _palette(fg);
+					color: _palette(fg-alt);
 					margin-left: (-0.125em / 2);
 					margin-top: (-0.5em / 2);
 					font-size: 1.1rem;
@@ -208,7 +208,7 @@
 				}
 
 				&:after {
-					background: transparentize(lighten(_palette(fg), 35), 0.25);
+					background: transparentize(lighten(_palette(fg-alt), 40), 0.55);
 					border-radius: _size(border-radius);
 					content: '';
 					height: 3.5em;
