--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -35,6 +35,7 @@
 	$palette: (
 		bg:					#ffffff,
 		bg-alt:				#f5f6f7,
+		fg-alt:				#7f888f,
 		fg:					#3d4449,
 		fg-bold:			#1d2e3f,
 		fg-light:			#9fa3a6,
