--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,8 @@ sitemap: false
 @import 'libs/functions';
 @import 'libs/mixins';
 @import 'libs/skel';
-@import 'font-awesome.min.css';
+@import 'fontawesome.css';
+@import 'fa-regular.css';
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700');
 
 /*
