--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -21,7 +21,7 @@
 
 // Font.
 	$font: (
-		family:				('carlmarx', sans-serif),
+		family:				('Open Sans', sans-serif),
 		family-heading:		('Roboto Slab', serif),
 		family-fixed:		('Courier New', monospace),
 		weight:				400,
