--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -73,47 +73,47 @@
           </header>
         <ul class="icons">
             {% if site.twitter_url %}
-            <li><a href="{{ site.twitter_url }}" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+            <li><a href="{{ site.twitter_url }}" class="iconb fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
             {% endif %}
             {% if site.googleplus_url %}
-            <li><a href="{{ site.googleplus_url }}" class="icon fa-google-plus" target="_blank"><span class="label">Google+</span></a></li>
+            <li><a href="{{ site.googleplus_url }}" class="iconb fa-google-plus" target="_blank"><span class="label">Google+</span></a></li>
             {% endif %}
             {% if site.facebook_url %}
-            <li><a href="{{ site.facebook_url }}" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+            <li><a href="{{ site.facebook_url }}" class="iconb fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
             {% endif %}
             {% if site.instagram_url %}
-            <li><a href="{{ site.instagram_url }}" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+            <li><a href="{{ site.instagram_url }}" class="iconb fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
             {% endif %}
             {% if site.pinterest_url %}
-            <li><a href="{{ site.pinterest_url }}" class="icon fa-pinterest" target="_blank"><span class="label">Pinterest</span></a></li>
+            <li><a href="{{ site.pinterest_url }}" class="iconb fa-pinterest" target="_blank"><span class="label">Pinterest</span></a></li>
             {% endif %}
             {% if site.500px_url %}
-            <li><a href="{{ site.500px_url }}" class="icon fa-500px" target="_blank"><span class="label">500px</span></a></li>
+            <li><a href="{{ site.500px_url }}" class="iconb fa-500px" target="_blank"><span class="label">500px</span></a></li>
             {% endif %}
             {% if site.gitlab_url %}
-            <li><a href="{{ site.gitlab_url }}" class="icon fa-gitlab" target="_blank"><span class="label">GitLab</span></a></li>
+            <li><a href="{{ site.gitlab_url }}" class="iconb fa-gitlab" target="_blank"><span class="label">GitLab</span></a></li>
             {% endif %}
             {% if site.github_url %}
-            <li><a href="{{ site.github_url }}" class="icon fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+            <li><a href="{{ site.github_url }}" class="iconb fa-github" target="_blank"><span class="label">GitHub</span></a></li>
             {% endif %}
             {% if site.slack_url %}
-            <li><a href="{{ site.slack_url }}" class="icon fa-slack" target="_blank"><span class="label">Slack</span></a></li>
+            <li><a href="{{ site.slack_url }}" class="iconb fa-slack" target="_blank"><span class="label">Slack</span></a></li>
             {% endif %}
             {% if site.linkedin_url %}
-            <li><a href="{{ site.linkedin_url }}" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+            <li><a href="{{ site.linkedin_url }}" class="iconb fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
             {% endif %}
             {% if site.xing_url %}
-            <li><a href="{{ site.xing_url }}" class="icon fa-xing" target="_blank"><span class="label">Xing</span></a></li>
+            <li><a href="{{ site.xing_url }}" class="iconb fa-xing" target="_blank"><span class="label">Xing</span></a></li>
             {% endif %}
           </ul>
         <ul class="contact">
             {% if site.email %}
-            <li class="fa-envelope-o"><a href="#">{{ site.email }}</a></li>
+            <li class="fa fa-envelope-o"><a href="#">{{ site.email }}</a></li>
             {% endif %}
             {% if site.phone %}
-            <li class="fa-phone">{{ site.phone }}</li>
+            <li class="fa fa-phone">{{ site.phone }}</li>
             {% endif %}
-            <li class="fa-home">
+            <li class="fa fa-home">
               Marco Stolze (alias Mc Pride)<br />
               {% if site.street_address %}
                 {{ site.street_address }}<br />
