--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -68,7 +68,7 @@
 			padding: 0;
 
 			li {
-				@include icon;
+				@include iconr;
 				border-top: solid 1px _palette(border);
 				margin: 1.5em 0 0 0;
 				padding: 1.5em 0 0 3em;
