--- a/assets/css/brands.scss
+++ b/assets/css/brands.scss
@@ -1,17 +1,13 @@
 ---
 sitemap: false
 ---
-
-/*!
- * Font Awesome Free 5.0.10 by @fontawesome - https://fontawesome.com
- * License - https://fontawesome.com/license (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
- */
 @import 'fontawesome/variables';
 
 @font-face {
   font-family: 'Font Awesome 5 Brands';
   font-style: normal;
   font-weight: normal;
+  font-display: $fa-font-display;
   src: url('#{$fa-font-path}/fa-brands-400.eot');
   src: url('#{$fa-font-path}/fa-brands-400.eot?#iefix') format('embedded-opentype'),
   url('#{$fa-font-path}/fa-brands-400.woff2') format('woff2'),
