--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,7 +6,10 @@ sitemap: false
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'fontawesome.css';
-@import 'fa-regular.css';
+@import 'brands.css';
+@import 'regular.css';
+/*@import 'solid.css';
+@import 'v4-shims.css';*/
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700');
 
 /*
